<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
	<TextView
		android:id="@+id/textview11"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="8dp"
		android:background="?colorOnSurfaceInverse"
		android:text="@string/frozen"
		android:textSize="12sp" />
	<LinearLayout
		android:id="@+id/linear13"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
		<LinearLayout
			android:id="@+id/linear14"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:orientation="vertical"
			android:layout_weight="10">
			<TextView
				android:id="@+id/textview1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingLeft="15dp"
				android:paddingTop="4dp"
				android:paddingRight="8dp"
				android:text="@string/app_name"
				android:textSize="23sp"
				android:textColor="?colorOnSurface" />
			<TextView
				android:id="@+id/textview9"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingLeft="15dp"
				android:paddingRight="8dp"
				android:paddingBottom="8dp"
				android:text="@string/basic_battery"
				android:textSize="12sp" />
		</LinearLayout>
		<LinearLayout
			android:id="@+id/linear17"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:layout_marginRight="10dp"
			android:gravity="right|center_vertical"
			android:orientation="vertical">
			<ImageView
				android:id="@+id/settings"
				android:layout_width="35dp"
				android:layout_height="35dp"
				android:padding="5dp"
				android:src="@drawable/icon_settings_round"
				android:scaleType="fitXY" />
		</LinearLayout>
	</LinearLayout>
	<LinearLayout
		android:id="@+id/linear8"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="15dp"
		android:background="?colorOnSurfaceInverse"
		android:orientation="vertical">
		<TextView
			android:id="@+id/textview8"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingLeft="8dp"
			android:paddingTop="8dp"
			android:paddingRight="8dp"
			android:text="@string/method"
			android:textSize="20sp" />
		<RadioGroup
			android:id="@+id/radiogroup1"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:orientation="horizontal">
			<RadioButton
				android:id="@+id/radiobutton1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:text="@string/root"
				android:textSize="12sp" />
			<RadioButton
				android:id="@+id/radiobutton2"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:text="@string/shizuku"
				android:textSize="12sp" />
		</RadioGroup>
		<TextView
			android:id="@+id/textview10"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/failed_work"
			android:textSize="13sp"
			android:textColor="#F44336" />
	</LinearLayout>
	<LinearLayout
		android:id="@+id/linear1"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="15dp"
		android:padding="15dp"
		android:background="?colorOnSurfaceInverse"
		android:orientation="horizontal">
		<Button
			android:id="@+id/button1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:text="@string/apply"
			android:textSize="16sp"
			android:layout_weight="1" />
		<Button
			android:id="@+id/button2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="8dp"
			android:padding="8dp"
			android:text="@string/reset"
			android:textSize="16sp"
			android:layout_weight="1" />
	</LinearLayout>
	<LinearLayout
		android:id="@+id/linear2"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="5dp"
		android:padding="15dp"
		android:background="?colorOnSurfaceInverse"
		android:gravity="center_vertical"
		android:orientation="horizontal">
		<EditText
			android:id="@+id/edittext1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:textSize="16sp"
			android:hint="@string/percent_hint"
			android:inputType="numberSigned" />
		<TextView
			android:id="@+id/textview2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="15dp"
			android:padding="8dp"
			android:text="@string/percentage_warn"
			android:textSize="14sp" />
	</LinearLayout>
	<LinearLayout
		android:id="@+id/linear4"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="5dp"
		android:padding="15dp"
		android:background="?colorOnSurfaceInverse"
		android:gravity="center_vertical"
		android:orientation="horizontal"
		android:layout_gravity="center_vertical">
		<CheckBox
			android:id="@+id/checkbox2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:text="@string/charging"
			android:textSize="16sp" />
		<TextView
			android:id="@+id/textview3"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="15dp"
			android:padding="8dp"
			android:text="@string/charging_warn"
			android:textSize="14sp" />
	</LinearLayout>
	<LinearLayout
		android:id="@+id/linear5"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="5dp"
		android:padding="15dp"
		android:background="?colorOnSurfaceInverse"
		android:gravity="center_vertical"
		android:orientation="horizontal"
		android:layout_gravity="center_vertical">
		<EditText
			android:id="@+id/edittext2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:textSize="16sp"
			android:hint="@string/capacity"
			android:inputType="numberSigned" />
		<TextView
			android:id="@+id/textview4"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="15dp"
			android:padding="8dp"
			android:text="@string/capacity_warn"
			android:textSize="14sp" />
	</LinearLayout>
	<LinearLayout
		android:id="@+id/linear6"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="15dp"
		android:background="?colorOnSurfaceInverse"
		android:gravity="center_vertical"
		android:orientation="vertical"
		android:layout_gravity="center_vertical">
		<LinearLayout
			android:id="@+id/linear7"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
			<TextView
				android:id="@+id/textview7"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:text="✅"
				android:textSize="12sp" />
			<SeekBar
				android:id="@+id/seekbar1"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:progress="30" />
		</LinearLayout>
		<TextView
			android:id="@+id/textview5"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:text="@string/temperature_warn"
			android:textSize="14sp" />
	</LinearLayout>
</LinearLayout>
