<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
	<TextView
		android:id="@+id/textview10"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:paddingLeft="14dp"
		android:paddingTop="25dp"
		android:paddingRight="8dp"
		android:paddingBottom="8dp"
		android:text="@string/settings"
		android:textSize="24sp" />
	<LinearLayout
		android:id="@+id/linear2"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="5dp"
		android:padding="5dp"
		android:gravity="center_horizontal|center_vertical"
		android:orientation="horizontal">
		<TextView
			android:id="@+id/textview2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:text="@string/no_settings"
			android:textSize="14sp" />
	</LinearLayout>
	<LinearLayout
		android:id="@+id/linear3"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="5dp"
		android:padding="15dp"
		android:background="?colorOnSurfaceInverse"
		android:gravity="center_vertical"
		android:orientation="horizontal">
		<ImageView
			android:id="@+id/imageview1"
			android:layout_width="30dp"
			android:layout_height="30dp"
			android:src="@drawable/icon_link_round"
			android:scaleType="fitXY" />
		<TextView
			android:id="@+id/textview11"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="15dp"
			android:padding="3dp"
			android:text="@string/github"
			android:textSize="17sp" />
	</LinearLayout>
	<LinearLayout
		android:id="@+id/linear4"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="5dp"
		android:padding="15dp"
		android:background="?colorOnSurfaceInverse"
		android:gravity="center_vertical"
		android:orientation="horizontal">
		<ImageView
			android:id="@+id/imageview2"
			android:layout_width="30dp"
			android:layout_height="30dp"
			android:src="@drawable/icon_link_round"
			android:scaleType="fitXY" />
		<TextView
			android:id="@+id/textview12"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="15dp"
			android:padding="3dp"
			android:text="@string/telegram_channel"
			android:textSize="17sp" />
	</LinearLayout>
</LinearLayout>
